Repositioning gallery button on gallery image to prevent being covered by gum gum in image ad

--- a/assets/css/scss/parts/_gallery.scss
+++ b/assets/css/scss/parts/_gallery.scss
@@ -11,7 +11,7 @@
 
 		a.post-gallery-open-button {
 			position: absolute;
-			bottom: 15px;
+			top: 15px;
 			left: 15px;
 			background-color: $red;
 			color: $white;
